--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,71 +1,70 @@
-workflows:
-  ios-release:
-    name: iOS release
-    instance_type: mac_mini_m2
+  ios-workflow:
+    name: iOS Workflow
     max_build_duration: 120
     integrations:
-      app_store_connect: codemagic
+      app_store_connect: <App Store Connect API key name>
     environment:
-      ios_signing:
-        distribution_type: app_store
-        bundle_identifier: io.flutter.app.FlutterApplication
+      groups:
+         - firebase_credentials
       vars:
-        XCODE_WORKSPACE: "ios/Runner.xcworkspace"
-        APP_STORE_APP_ID: 1555555551 # <-- Put the app id number here. This is found in App Store Connect > App > General > App Information
-        XCODE_SCHEME: _   # <-- Put Your Xcode sceheme here
-        BUNDLE_ID: io.flutter.app.FlutterApplication
-        ENTRY_POINT: _    # <-- Put Your Entry point to your flutter application here
+        XCODE_WORKSPACE: "Runner.xcworkspace"
+        XCODE_SCHEME: "Runner"                
+        BUNDLE_ID: "io.codemagic.flutteryaml" # <-- Put your bundle id here
+        APP_STORE_ID: 1111111111 # <-- Use the TestFlight Apple id number (An automatically generated ID assigned to your app) found under General > App Information > Apple ID. 
+      ios_signing:
+          distribution_type: app_store
+          bundle_identifier: com.codemagicFirebaseAppDistribution.io # bundle identifier that is associated with provisioning profile
       flutter: stable
       xcode: latest
       cocoapods: default
-    triggering:
-      events:
-        - push
-      branch_patterns:
-        - pattern: "main"
-          include: true
-          source: true
     scripts:
-      - name: Get Flutter Packages
-        script: |
-          flutter packages pub get
-      - name: Pod install
-        script: |
-          find . -name "Podfile" -execdir pod install \;
       - name: Set up code signing settings on Xcode project
         script: |
           xcode-project use-profiles
+      - name: Get Flutter packages
+        script: |
+          cd . && flutter packages pub get
+      - name: Flutter analyze
+        script: |
+          cd . && flutter analyze
+      - name: Flutter unit tests
+        script: |
+          cd . && flutter test
+        ignore_failure: true          
+      - name: Install pods
+        script: |
+          find . -name "Podfile" -execdir pod install \;
       - name: Flutter build ipa and automatic versioning
         script: |
           flutter build ipa --release \
           --build-name=1.0.0 \
           --build-number=$(($(app-store-connect get-latest-testflight-build-number "$APP_STORE_ID") + 1)) \
-          --export-options-plist=/Users/builder/export_options.plist \
-          --flavor="$XCODE_SCHEME" \
-          -t "$ENTRY_POINT"
+          --export-options-plist=/Users/builder/export_options.plist
     artifacts:
       - build/ios/ipa/*.ipa
       - /tmp/xcodebuild_logs/*.log
       - flutter_drive.log
-      - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.dSYM
     publishing:
+      # See the following link for details about email publishing - https://docs.codemagic.io/publishing-yaml/distribution/#email
       email:
         recipients:
           - user_1@example.com
           - user_2@example.com
         notify:
-          success: true
-          failure: true
-      app_store_connect:
-        auth: integration
-        
-        # Configuration related to TestFlight (optional)
-        # Note: This action is performed during post-processing.
-        submit_to_testflight: true
-        beta_groups: # Specify the names of beta tester groups that will get access to the build once it has passed beta review.
-          - group name 1
-          - group name 2
-
-        # Configuration related to App Store (optional)
-        # Note: This action is performed during post-processing.
-        submit_to_app_store: false
+          success: true     # To receive a notification when a build succeeds
+          failure: false    # To not receive a notification when a build fails
+      slack: 
+        # See the following link about how to connect your Slack account - https://docs.codemagic.io/publishing-yaml/distribution/#slack
+        channel: "#builds"
+        notify_on_build_start: true   # To receive a notification when a build starts
+        notify:
+          success: true               # To receive a notification when a build succeeds
+          failure: false              # To not receive a notification when a build fails
+      app_store_connect:   # https://docs.codemagic.io/publishing-yaml/distribution              
+        auth: integration 
+      firebase:
+        firebase_service_account: $FIREBASE_SERVICE_ACCOUNT
+        ios: 
+           app_id: x:xxxxxxxxxxxx:ios:xxxxxxxxxxxxxxxxxxxxxx
+           groups:
+              - iosTesters
