--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>API_KEY</key>
-	<string>AIzaSyBPjwS5BVo3udnuXTTC85PSttWXSil8b0Q</string>
+	<string></string>
 	<key>GCM_SENDER_ID</key>
 	<string>790432405327</string>
 	<key>PLIST_VERSION</key>
