--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,70 +1,47 @@
-  ios-workflow:
-    name: iOS Workflow
-    max_build_duration: 120
-    integrations:
-      app_store_connect: <App Store Connect API key name>
+workflows:
+  ios-firebase:
+    name: iOS Firebase Distribution
+    max_build_duration: 100
     environment:
-      groups:
-         - firebase_credentials
-      vars:
-        XCODE_WORKSPACE: "Runner.xcworkspace"
-        XCODE_SCHEME: "Runner"                
-        BUNDLE_ID: "io.codemagic.flutteryaml" # <-- Put your bundle id here
-        APP_STORE_ID: 1111111111 # <-- Use the TestFlight Apple id number (An automatically generated ID assigned to your app) found under General > App Information > Apple ID. 
-      ios_signing:
-          distribution_type: app_store
-          bundle_identifier: com.codemagicFirebaseAppDistribution.io # bundle identifier that is associated with provisioning profile
       flutter: stable
       xcode: latest
       cocoapods: default
+      groups:
+        - FIREBASE_IOS # Group to associate the environment with
+      vars:
+        FIREBASE_IOS_APP_ID: $FIREBASE_IOS_APP_ID # Replace with your Firebase iOS App ID
+        BUNDLE_ID: "com.codemagicFirebaseAppDistribution.io" # Replace with your app's bundle ID
+        FIREBASE_IOS_JSON: $FIREBASE_IOS_JSON # Base64-encoded Firebase key
+        FIREBASE_AUTH_TOKEN: $FIREBASE_AUTH_TOKEN # Firebase token for publishing
     scripts:
-      - name: Set up code signing settings on Xcode project
-        script: |
-          xcode-project use-profiles
+      - name: Check environment variables
+        script: echo $FIREBASE_IOS_ALIAS
+      - name: Set up Firebase Distribution Key
+        script: echo $FIREBASE_IOS_JSON | base64 --decode > /ios/firebase_key.json
       - name: Get Flutter packages
         script: |
-          cd . && flutter packages pub get
-      - name: Flutter analyze
+          flutter pub get
+      - name: Analyze Flutter code
         script: |
-          cd . && flutter analyze
-      - name: Flutter unit tests
+          flutter analyze
+      - name: Run Flutter tests
         script: |
-          cd . && flutter test
-        ignore_failure: true          
-      - name: Install pods
+          flutter test
+        ignore_failure: true # Optional: Ignore test failures
+      - name: Build iOS IPA
         script: |
-          find . -name "Podfile" -execdir pod install \;
-      - name: Flutter build ipa and automatic versioning
-        script: |
-          flutter build ipa --release \
-          --build-name=1.0.0 \
-          --build-number=$(($(app-store-connect get-latest-testflight-build-number "$APP_STORE_ID") + 1)) \
-          --export-options-plist=/Users/builder/export_options.plist
+          flutter build ipa --release
     artifacts:
       - build/ios/ipa/*.ipa
-      - /tmp/xcodebuild_logs/*.log
-      - flutter_drive.log
     publishing:
-      # See the following link for details about email publishing - https://docs.codemagic.io/publishing-yaml/distribution/#email
+      firebase:
+        token: $FIREBASE_AUTH_TOKEN # Add the Firebase token securely
+        apps:
+          - appId: $FIREBASE_IOS_APP_ID
+            paths:
+              - build/ios/ipa/*.ipa
+        groups:
+          - iosTesters # Replace with your Firebase tester group name
       email:
         recipients:
-          - user_1@example.com
-          - user_2@example.com
-        notify:
-          success: true     # To receive a notification when a build succeeds
-          failure: false    # To not receive a notification when a build fails
-      slack: 
-        # See the following link about how to connect your Slack account - https://docs.codemagic.io/publishing-yaml/distribution/#slack
-        channel: "#builds"
-        notify_on_build_start: true   # To receive a notification when a build starts
-        notify:
-          success: true               # To receive a notification when a build succeeds
-          failure: false              # To not receive a notification when a build fails
-      app_store_connect:   # https://docs.codemagic.io/publishing-yaml/distribution              
-        auth: integration 
-      firebase:
-        firebase_service_account: $FIREBASE_SERVICE_ACCOUNT
-        ios: 
-           app_id: x:xxxxxxxxxxxx:ios:xxxxxxxxxxxxxxxxxxxxxx
-           groups:
-              - iosTesters
+          - huber.marina@gmail.com
