--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,7 +1,7 @@
 workflows:
   ios-firebase:
     name: iOS Firebase Distribution
-    max_build_duration: 100
+    max_build_duration: 120  
     environment:
       flutter: stable
       xcode: latest
@@ -35,13 +35,14 @@ workflows:
       - build/ios/ipa/*.ipa
     publishing:
       firebase:
-        token: $FIREBASE_AUTH_TOKEN # Add the Firebase token securely
-        apps:
-          - appId: $FIREBASE_IOS_APP_ID
-            paths:
-              - build/ios/ipa/*.ipa
-        groups:
-          - iosTesters # Replace with your Firebase tester group name
+        firebase_token: $FIREBASE_TOKEN # Add the Firebase token securely
+        ios:
+            app_id: $FIREBASE_IOS_APP_ID
+            groups:
+             - iosTesters
       email:
         recipients:
           - huber.marina@gmail.com
+        notify:
+           success: true 
+           failure: false 
