--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -3,6 +3,9 @@ workflows:
     name: iOS Firebase Distribution
     max_build_duration: 120  
     environment:
+      ios_signing:
+        distribution_type: app_store
+        bundle_identifier: com.codemagicFirebaseAppDistribution.io
       flutter: stable
       xcode: latest
       cocoapods: default
