--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -46,6 +46,10 @@ workflows:
           --build-name=1.0.0 \
           --build-number=$(($(app-store-connect get-latest-testflight-build-number "$APP_STORE_ID") + 1)) \
           --export-options-plist=/Users/builder/export_options.plist
+      - name: Load Firebase configuration
+        script: | 
+          set -e 
+          echo $FIREBASE_IOS_KEY > $CM_BUILD_DIR/ios/Runner/GoogleService-Info.plist  
     artifacts:
       - build/ios/ipa/*.ipa
       - /tmp/xcodebuild_logs/*.log
