--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -7,6 +7,8 @@ workflows:
       xcode: latest
       cocoapods: default
       groups:
+        - MANUAL_CODE_SIGN
+        - APPSTORE_CRED
         - FIREBASE_IOS
       vars:
         XCODE_WORKSPACE: "Runner.xcworkspace"
@@ -20,9 +22,26 @@ workflows:
       - name: Set up keychain to be used for codesigning using Codemagic CLI 'keychain' command
         script: |
           keychain initialize
-      - name: Use system default keychain
+      - name: set up provisioning profiles
         script: |
-          keychain add-certificates
+          PROFILES_HOME="$HOME/Library/MobileDevice/Provisioning Profiles"
+          mkdir -p "$PROFILES_HOME"
+          PROFILE_PATH="$(mktemp "$PROFILES_HOME"/$(uuidgen).mobileprovision)"
+          echo ${CM_PROVISIONING_PROFILE} | base64 --decode > "$PROFILE_PATH"
+          echo "Saved provisioning profile $PROFILE_PATH"
+      - name: Add signing certificate to keychain
+        script: |
+          echo $CM_CERTIFICATE | base64 --decode > /tmp/certificate.p12
+          keychain add-certificates --certificate /tmp/certificate.p12 --certificate-password $CM_CERTIFICATE_PASSWORD
+      - name: Increment build number
+        script: |
+          # increment build number
+          #!/bin/sh
+          set -e
+          set -x
+          cd $FCI_BUILD_DIR
+          # agvtool new-version -all $(($BUILD_NUMBER +1))
+          agvtool new-version -all $(($(app-store-connect get-latest-testflight-build-number "$APP_STORE_APPLE_ID") + 1))
       - name: Set up code signing settings on Xcode project
         script: |
           xcode-project use-profiles
@@ -69,4 +88,8 @@ workflows:
           - nihal@nevercode.io
         notify:
            success: false 
-           failure: false 
+           failure: false
+      app_store_connect:
+        api_key: $APP_STORE_CONNECT_PRIVATE_KEY         # Contents of the API key, can also reference environment variable such as $APP_STORE_CONNECT_PRIVATE_KEY
+        key_id: $APP_STORE_CONNECT_KEY_IDENTIFIER       # Alphanumeric value that identifies the API key, can also reference environment variable such as $APP_STORE_CONNECT_KEY_IDENTIFIER
+        issuer_id: $APP_STORE_CONNECT_ISSUER_ID         # Alphanumeric value that identifies who created the API key, can also reference environment variable such as $APP_STORE_CONNECT_ISSUER_ID
