--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -47,12 +47,20 @@ workflows:
       - name: Install pods
         script: |
           find . -name "Podfile" -execdir pod install \;    
-      - name: Build .ipa
+      - name: Flutter build ipa and automatic versioning
         script: |
-          xcode-project build-ipa --workspace "$XCODE_WORKSPACE" --scheme "$XCODE_SCHEME"
+          flutter build ipa --release \
+          --build-name=1.0.0 \
+          --build-number=$(($(app-store-connect get-latest-testflight-build-number "$APP_STORE_ID") + 1)) \
+          --export-options-plist=/Users/builder/export_options.plist
+      - name: Load Firebase configuration
+        script: | 
+          set -e 
+          echo $FIREBASE_IOS_KEY > $CM_BUILD_DIR/ios/Runner/GoogleService-Info.plist  
     artifacts:
       - build/ios/ipa/*.ipa
-      - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.dSYM
+      - /tmp/xcodebuild_logs/*.log
+      - flutter_drive.log
     publishing:
       firebase:
         firebase_service_account: $FIREBASE_SERVICE_ACCOUNT
