--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -47,13 +47,13 @@ workflows:
       - name: Install pods
         script: |
           find . -name "Podfile" -execdir pod install \;    
-       - name: Flutter build ipa and automatic versioning
-          script: |
-            agvtool new-version -all $(($BUILD_NUMBER))
-            flutter build ipa --release \
-              --build-name=1.0.$BUILD_NUMBER \
-              --build-number=$BUILD_NUMBER \
-              --export-options-plist=/Users/builder/export_options.plist
+      - name: Flutter build ipa and automatic versioning
+        script: |
+          agvtool new-version -all $(($BUILD_NUMBER))
+          flutter build ipa --release \
+            --build-name=1.0.$BUILD_NUMBER \
+            --build-number=$BUILD_NUMBER \
+            --export-options-plist=/Users/builder/export_options.plist
       - name: Load Firebase configuration
         script: | 
           set -e 
@@ -67,6 +67,8 @@ workflows:
         firebase_service_account: $FIREBASE_SERVICE_ACCOUNT
         ios:
           app_id: app-1-790432405327-ios-8683d3839010be88f0173a
+          groups:
+              - iosTesters
       email:
         recipients:
           - huber.marina@gmail.com
