--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -67,8 +67,7 @@ workflows:
         firebase_service_account: $FIREBASE_SERVICE_ACCOUNT
         ios:
           app_id: app-1-790432405327-ios-8683d3839010be88f0173a
-          groups:
-              - iosTesters
+          groups: ""
       email:
         recipients:
           - huber.marina@gmail.com
