--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -67,12 +67,14 @@ workflows:
         firebase_service_account: $FIREBASE_SERVICE_ACCOUNT
         ios:
           app_id: 1:790432405327:ios:8683d3839010be88f0173a
+          groups:
+            - iosTesters
       email:
         recipients:
           - huber.marina@gmail.com
           - nihal@nevercode.io
         notify:
-           success: false 
+           success: true 
            failure: false
       app_store_connect:
         api_key: $APP_STORE_CONNECT_PRIVATE_KEY         # Contents of the API key, can also reference environment variable such as $APP_STORE_CONNECT_PRIVATE_KEY
