--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -3,6 +3,9 @@ workflows:
     name: iOS Firebase Distribution
     max_build_duration: 120
     environment:
+      ios_signing:
+        distribution_type: ad_hoc
+        bundle_identifier: com.codemagicFirebaseAppDistribution.io
       flutter: stable
       xcode: latest
       cocoapods: default
@@ -15,9 +18,6 @@ workflows:
         XCODE_SCHEME: "Runner"   
         BUNDLE_ID: "com.codemagicFirebaseAppDistribution.io"
         APP_STORE_ID: 6740295135 
-      ios_signing:
-        distribution_type: ad_hoc
-        bundle_identifier: com.codemagicFirebaseAppDistribution.io
     scripts:
       - name: Set up keychain to be used for codesigning using Codemagic CLI 'keychain' command
         script: |
@@ -69,7 +69,8 @@ workflows:
         submit_to_app_store: false
       firebase:
         firebase_service_account: $FIREBASE_SERVICE_ACCOUNT
-        ios: 1-790432405327-ios-8683d3839010be88f0173a
+        ios: 
+          app_id: 1-790432405327-ios-8683d3839010be88f0173a
           groups:
             - iosTesters
       email:
