--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -38,17 +38,24 @@ workflows:
           xcode-project use-profiles
       - name: Get Flutter packages
         script: |
-          cd . && flutter packages pub get
-      - name: Flutter analyze
-        script: |
-          cd . && flutter analyze
-        ignore_failure: true          
+          cd . && flutter packages pub get      
       - name: Install pods
         script: |
           find . -name "Podfile" -execdir pod install \;
       - name: Flutter build ipa and automatic versioning # agvtool new-version -all $(($BUILD_NUMBER)) responsible for increasing the version number
         script: |
+          cd ios
+          # Update the version number using agvtool
           agvtool new-version -all $(($BUILD_NUMBER))
+
+          # Navigate back to the project root directory
+          cd ..
+
+          # Retrieve the latest build number from TestFlight and increment it
+          LATEST_BUILD_NUMBER=$(app-store-connect get-latest-testflight-build-number "$APP_STORE_ID")
+          NEW_BUILD_NUMBER=$(($LATEST_BUILD_NUMBER + 1))
+
+          # Build the Flutter iOS app
           flutter build ipa --release \
             --build-name=1.0.0 \
             --build-number=$(($(app-store-connect get-latest-testflight-build-number "$APP_STORE_ID") + 1)) \
