--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -73,7 +73,7 @@ workflows:
       firebase:
         firebase_service_account: $FIREBASE_SERVICE_ACCOUNT
         ios: 
-          app_id: 1-790432405327-ios-8683d3839010be88f0173a
+          app_id: 1:790432405327:ios:8683d3839010be88f0173a
           groups:
             - iosTesters
       email:
