--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -41,32 +41,19 @@ workflows:
           cd . && flutter packages pub get      
       - name: Flutter build ipa and automatic versioning # agvtool new-version -all $(($BUILD_NUMBER)) responsible for increasing the version number
         script: |
+          # Get the next build number directly
+          NEXT_BUILD_NUMBER=$(($(app-store-connect get-latest-testflight-build-number "$APP_STORE_ID") + 1))
+          
+          # Set the build number in the iOS project
           cd ios
-          # Retrieve the latest build number from App Store Connect
-          LATEST_BUILD_NUMBER=$(app-store-connect get-latest-testflight-build-number "$APP_STORE_ID")
-          if [ -z "$LATEST_BUILD_NUMBER" ]; then
-            echo "Failed to retrieve the latest build number. Ensure App Store Connect credentials are correct."
-            exit 1
-          fi
-
-          # Increment the build number
-          NEW_BUILD_NUMBER=$((LATEST_BUILD_NUMBER + 1))
-          echo "Latest build number: $LATEST_BUILD_NUMBER"
-          echo "New build number: $NEW_BUILD_NUMBER"
-
-          # Set the new build number using agvtool
-          agvtool new-version -all $NEW_BUILD_NUMBER
-
+          agvtool new-version -all $NEXT_BUILD_NUMBER
           cd ..
 
-          # Build the Flutter iOS app
+          # Build IPA with the incremented build number
           flutter build ipa --release \
             --build-name=1.0.0 \
-            --build-number=$NEW_BUILD_NUMBER \
+            --build-number=$NEXT_BUILD_NUMBER \
             --export-options-plist=/Users/builder/export_options.plist
-
-          # Verify the IPA before uploading
-          echo "IPA built successfully with build number $NEW_BUILD_NUMBER"
       - name: Load Firebase configuration plist # By using base64 you load a JSON file or a plist into a string with no spaces, easier to assign to variables in scripts.
         script: | 
           set -e 
