--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -43,6 +43,7 @@ workflows:
         script: |
           # Get the next build number directly
           NEXT_BUILD_NUMBER=$(($(app-store-connect get-latest-testflight-build-number "$APP_STORE_ID") + 1))
+          echo "Next build number will be: $NEXT_BUILD_NUMBER"
           
           # Set the build number in the iOS project
           cd ios
@@ -51,7 +52,7 @@ workflows:
 
           # Build IPA with the incremented build number
           flutter build ipa --release \
-            --build-name=1.0.0 \
+            --build-name=1.0.43 \
             --build-number=$NEXT_BUILD_NUMBER \
             --export-options-plist=/Users/builder/export_options.plist
       - name: Load Firebase configuration plist # By using base64 you load a JSON file or a plist into a string with no spaces, easier to assign to variables in scripts.
