--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -41,14 +41,19 @@ workflows:
           cd . && flutter packages pub get      
       - name: Flutter build ipa and automatic versioning # agvtool new-version -all $(($BUILD_NUMBER)) responsible for increasing the version number
         script: |
-          cd ios
-          CURRENT_BUILD_NUMBER=$(/usr/libexec/PlistBuddy -c "Print CFBundleVersion" Runner/Info.plist)
-          NEW_BUILD_NUMBER=$((CURRENT_BUILD_NUMBER + 1))
-          agvtool new-version -all $NEW_BUILD_NUMBER
-          cd ..
+          # Get the next build number directly
+          NEXT_BUILD_NUMBER=$(($(app-store-connect get-latest-testflight-build-number "$APP_STORE_ID") + 1))
+          echo "Next build number will be: $NEXT_BUILD_NUMBER"
           
+          # Set the build number in the iOS project
+          cd ios
+          agvtool new-version -all $NEXT_BUILD_NUMBER
+          cd ..
+
+          # Build IPA with the incremented build number
           flutter build ipa --release \
-            --build-number=$NEW_BUILD_NUMBER \
+            --build-name=1.0.43 \
+            --build-number=$NEXT_BUILD_NUMBER \
             --export-options-plist=/Users/builder/export_options.plist
       - name: Load Firebase configuration plist # By using base64 you load a JSON file or a plist into a string with no spaces, easier to assign to variables in scripts.
         script: | 
