--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -41,19 +41,15 @@ workflows:
           cd . && flutter packages pub get      
       - name: Flutter build ipa and automatic versioning # agvtool new-version -all $(($BUILD_NUMBER)) responsible for increasing the version number
         script: |
-          # Get the next build number directly
-          NEXT_BUILD_NUMBER=$(($(app-store-connect get-latest-testflight-build-number "$APP_STORE_ID") + 1))
-          echo "Next build number will be: $NEXT_BUILD_NUMBER"
+          BUILD_NUMBER=50
           
-          # Set the build number in the iOS project
           cd ios
-          agvtool new-version -all $NEXT_BUILD_NUMBER
+          agvtool new-version -all $BUILD_NUMBER
           cd ..
 
-          # Build IPA with the incremented build number
           flutter build ipa --release \
             --build-name=1.0.43 \
-            --build-number=$NEXT_BUILD_NUMBER \
+            --build-number=$BUILD_NUMBER \
             --export-options-plist=/Users/builder/export_options.plist
       - name: Load Firebase configuration plist # By using base64 you load a JSON file or a plist into a string with no spaces, easier to assign to variables in scripts.
         script: | 
