--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -41,36 +41,27 @@ workflows:
           cd . && flutter packages pub get      
       - name: Flutter build ipa and automatic versioning # agvtool new-version -all $(($BUILD_NUMBER)) responsible for increasing the version number
         script: |
-          echo "Starting version check..."
-          echo "Current Date: $(date)"
+          echo "Starting build process..."
+          
+          # Get latest TestFlight build details
+          LATEST_BUILD=$(app-store-connect get-latest-testflight-build-number "$BUNDLE_ID")
+          LATEST_VERSION=$(app-store-connect get-latest-testflight-version "$BUNDLE_ID")
+          
+          echo "Found in TestFlight - Version: $LATEST_VERSION Build: $LATEST_BUILD"
+          
+          # Increment both
+          NEW_BUILD=$((LATEST_BUILD + 1))
+          NEW_VERSION=$(echo $LATEST_VERSION | awk -F. '{$NF = $NF + 1;} 1' | sed 's/ /./g')
+          
+          echo "Will build new version: $NEW_VERSION (Build: $NEW_BUILD)"
           
           cd ios
-          echo "=== Current Directory ==="
-          pwd
-          echo "========================"
-          
-          echo "Checking Info.plist..."
-          CURRENT_BUILD_NUMBER=$(/usr/libexec/PlistBuddy -c "Print CFBundleVersion" Runner/Info.plist || echo "48")
-          echo "Found build number in Info.plist: $CURRENT_BUILD_NUMBER"
-          
-          NEW_BUILD_NUMBER=$((CURRENT_BUILD_NUMBER + 1))
-          echo "Incrementing to new build number: $NEW_BUILD_NUMBER"
-          
-          echo "Updating version with agvtool..."
-          agvtool what-version
-          agvtool new-version -all $NEW_BUILD_NUMBER
-          echo "Version after update:"
-          agvtool what-version
-          
+          agvtool new-version -all $NEW_BUILD
           cd ..
           
-          echo "Building IPA with:"
-          echo "- Build name: 1.0.43"
-          echo "- Build number: $NEW_BUILD_NUMBER"
-          
           flutter build ipa --release \
-            --build-name=1.0.43 \
-            --build-number=$NEW_BUILD_NUMBER \
+            --build-name=$NEW_VERSION \
+            --build-number=$NEW_BUILD \
             --export-options-plist=/Users/builder/export_options.plist
       - name: Load Firebase configuration plist # By using base64 you load a JSON file or a plist into a string with no spaces, easier to assign to variables in scripts.
         script: | 
