--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -39,7 +39,7 @@ workflows:
           #!/bin/sh
           set -e
           set -x
-          cd $FCI_BUILD_DIR
+          cd $FCI_BUILD_DIR/ios
           # agvtool new-version -all $(($BUILD_NUMBER +1))
           agvtool new-version -all $(($(app-store-connect get-latest-testflight-build-number "$APP_STORE_ID") + 1))
       - name: Set up code signing settings on Xcode project
