--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -35,14 +35,14 @@ workflows:
           keychain add-certificates --certificate /tmp/certificate.p12 --certificate-password $CM_CERTIFICATE_PASSWORD
       - name: Increment build number
         script: |
-          set -e
-          set -x
           cd $FCI_BUILD_DIR/ios
           LATEST_BUILD=$(app-store-connect get-latest-testflight-build-number "$APP_STORE_ID")
           NEW_BUILD=$((LATEST_BUILD + 1))
+          echo "Latest TestFlight build: $LATEST_BUILD"
+          echo "Setting new build number to: $NEW_BUILD"
           agvtool new-version -all $NEW_BUILD
-          echo "Setting build number to: $NEW_BUILD"
-      - name: Set up code signing settings on Xcode project
+          # Export the NEW_BUILD for the next step
+          echo "NEW_BUILD=$NEW_BUILD" >> $FCI_BUILD_DIR/env.sh
         script: |
           xcode-project use-profiles
       - name: Get Flutter packages
@@ -50,6 +50,7 @@ workflows:
           cd . && flutter packages pub get
       - name: Flutter build ipa and automatic versioning # agvtool new-version hardcodes minor vesion
         script: |
+          source $FCI_BUILD_DIR/env.sh
           flutter build ipa --release \
             --build-name=1.0.$NEW_BUILD \
             --build-number=$NEW_BUILD \
